[package]
name = "pong3d"
version = "0.1.0"
edition = "2021"

[dependencies]
# devserver = "0.4.2"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

[dependencies.web-sys]
version = "0.3.69"
features = [
 'Document',
  'Window',
  'HtmlCanvasElement' ,
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlUniformLocation'
]


[lib]
crate-type = ["cdylib", "rlib"]